--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="btn btn-ghost text-9xl font-bold">
             <img src="/pic/NongQuiz.png" alt="NongQuiz Logo" class="h-10 mr-2" />NongQuiz
         </a>
-        <a href="https://github.com/AayNong" target="_blank" class="flex items-center">
+        <a href="https://github.com/tainnnn" target="_blank" class="flex items-center">
             <img src="/pic/github.png" alt="GitHub" class="h-8 w-8" />
         </a>
     </div>        
